--- a/Website/src/app/locales/en-US.json
+++ b/Website/src/app/locales/en-US.json
@@ -1,10 +1,27 @@
 {
-    "explore": "Explore",
-    "analysis": "Analysis",
-    "community": "Community",
-    "dashboard": "Dashboard",
-    "theme": "Theme",
-    "dark": "Dark",
-    "light": "Light",
-    "language": "Language"
+    "basic": {
+        "explore": "Explore",
+        "analysis": "Analysis",
+        "community": "Community",
+        "help": "Help",
+        "dashboard": "Dashboard",
+        "theme": "Theme",
+        "dark": "Dark",
+        "light": "Light",
+        "language": "Language",
+        "intro": "QuantDirect - A platform for quant researchers to analysis and communicate."
+    },
+    "home": {
+        "welcome": "Welcome"
+    },
+    "view": {
+        "futures": "Futures",
+        "stocks": "Stocks",
+        "DCE": "Dalian Commodity Exchange (DCE)",
+        "CZCE": "Zhengzhou Commodity Exchange (CZCE)",
+        "GFEX": "Guangzhou Futures Exchange (GFEX)",
+        "SHFE": "Shanghai Futures Exchange (SHFE)",
+        "INE": "Shanghai International Energy Exchange (INE)",
+        "CFFEX": "China Financial Futures Exchange (CFFEX)"
+    }
 }
