--- a/Website/src/app/page/locales/resource/zh-CN.json
+++ b/Website/src/app/page/locales/resource/zh-CN.json
@@ -30,6 +30,9 @@
             "US": "美国"
         },
         "now": "现在",
-        "notice": "提示：点击侧边栏的选项以查看更多详细信息"
+        "notice": "提示：点击侧边栏的选项以查看更多详细信息",
+        "loading": "加载中...",
+        "no_data": "暂无数据",
+        "fetch_failed": "获取数据失败"
     }
 }
