--- a/Website/src/app/page/locales/resource/zh-HK.json
+++ b/Website/src/app/page/locales/resource/zh-HK.json
@@ -30,6 +30,9 @@
             "US": "美國"
         },
         "now": "現在",
-        "notice": "提示：點擊側邊欄之選項以查看更多詳細訊息"
+        "notice": "提示：點擊側邊欄之選項以查看更多詳細訊息",
+        "loading": "載入中...",
+        "no_data": "暫無數據",
+        "fetch_failed": "獲取數據失敗"
     }
 }
