Added: Contract Information Display

--- a/Website/src/app/page/locales/resource/en-US.json
+++ b/Website/src/app/page/locales/resource/en-US.json
@@ -29,6 +29,25 @@
             "HK": "Hong Kong SAR",
             "US": "USA"
         },
+        "contracts": {
+            "name": "Contract Name",
+            "code": "Contract Code",
+            "symbol": "Trading Symbol",
+            "exchange": "Exchange",
+            "trade_unit": "Trading Unit",
+            "quote_unit": "Quote Unit",
+            "quote_unit_desc": "Minimum Tick Size",
+            "d_mode": "Delivery Mode",
+            "d_month": "Delivery Month",
+            "list_date": "Listing Date",
+            "delist_date": "Last Trading Day",
+            "trade_time": "Trading Hours"
+        },
+        "sort": "Sort",
+        "all_contracts": "All",
+        "most_active": "Most Active",
+        "continuous_contracts": "Continuous",
+        "contract_name": "Contract Name",
         "now": "Now",
         "notice": "Notice: Click the options in the sidebar for more detailed information.",
         "loading": "Loading...",
