--- a/Website/src/app/page/locales/resource/zh-CN.json
+++ b/Website/src/app/page/locales/resource/zh-CN.json
@@ -29,6 +29,24 @@
             "HK": "香港",
             "US": "美国"
         },
+        "contracts": {
+            "name": "合约名称",
+            "code": "合约代码",
+            "symbol": "交易标识",
+            "exchange": "交易所",
+            "trade_unit": "交易单位",
+            "quote_unit": "报价单位",
+            "quote_unit_desc": "最小变动单位",
+            "d_mode": "交割方式",
+            "d_month": "交割月",
+            "list_date": "上市日期",
+            "delist_date": "最后交易日",
+            "trade_time": "交易时间"
+        },
+        "sort": "筛选",
+        "all_contracts": "所有合约",
+        "most_active": "主力合约",
+        "continuous_contracts": "连续合约",
         "now": "现在",
         "notice": "提示：点击侧边栏的选项以查看更多详细信息",
         "loading": "加载中...",
