--- a/Website/src/app/page/locales/resource/zh-HK.json
+++ b/Website/src/app/page/locales/resource/zh-HK.json
@@ -29,6 +29,24 @@
             "HK": "香港",
             "US": "美國"
         },
+        "contracts": {
+            "name": "合約名稱",
+            "code": "合約代碼",
+            "symbol": "交易標誌",
+            "exchange": "交易所",
+            "trade_unit": "交易單位",
+            "quote_unit": "報價單位",
+            "quote_unit_desc": "最小變動單位",
+            "d_mode": "交割方式",
+            "d_month": "交割月",
+            "list_date": "上市日期",
+            "delist_date": "最後交易日",
+            "trade_time": "交易時間"
+        },
+        "sort": "篩選",
+        "all_contracts": "所有合約",
+        "most_active": "主力合約",
+        "continuous_contracts": "連續合約",
         "now": "現在",
         "notice": "提示：點擊側邊欄之選項以查看更多詳細訊息",
         "loading": "載入中...",
