--- a/Website/src/app/page/locales/resource/zh-CN.json
+++ b/Website/src/app/page/locales/resource/zh-CN.json
@@ -43,6 +43,9 @@
             "delist_date": "最后交易日",
             "trade_time": "交易时间"
         },
+        "intro": {
+            "futures": "目前仅提供不定期延迟更新的每分钟数据以及由此推算的其他周期数据，以及延迟更新的每日数据"
+        },
         "sort": "筛选",
         "all_contracts": "所有合约",
         "most_active": "主力合约",
