--- a/Website/src/app/page/locales/resource/zh-CN.json
+++ b/Website/src/app/page/locales/resource/zh-CN.json
@@ -64,6 +64,21 @@
         "notice": "提示：点击侧边栏的选项以查看更多详细信息",
         "loading": "加载中...",
         "no_data": "暂无数据",
-        "fetch_failed": "获取数据失败"
+        "fetch_failed": "获取数据失败",
+        "periods": {
+            "1min": "1分钟",
+            "3min": "3分钟",
+            "5min": "5分钟",
+            "10min": "10分钟",
+            "15min": "15分钟",
+            "30min": "30分钟",
+            "60min": "60分钟",
+            "1day": "1日",
+            "3day": "3日",
+            "1week": "1周",
+            "1month": "1月",
+            "1quarter": "1季",
+            "1year": "1年"
+        }
     }
 }
