--- a/Website/src/app/page/locales/resource/zh-HK.json
+++ b/Website/src/app/page/locales/resource/zh-HK.json
@@ -61,6 +61,21 @@
         "notice": "提示：點擊側邊欄之選項以查看更多詳細訊息",
         "loading": "載入中...",
         "no_data": "暫無數據",
-        "fetch_failed": "獲取數據失敗"
+        "fetch_failed": "獲取數據失敗",
+        "periods": {
+            "1min": "1分鐘",
+            "3min": "3分鐘",
+            "5min": "5分鐘",
+            "10min": "10分鐘",
+            "15min": "15分鐘",
+            "30min": "30分鐘",
+            "60min": "60分鐘",
+            "1day": "1日",
+            "3day": "3日",
+            "1week": "1週",
+            "1month": "1月",
+            "1quarter": "1季",
+            "1year": "1年"
+        }
     }
 }
