Added: Support for BarChart.

--- a/App/src/app/page/locales/resource/en-US.json
+++ b/App/src/app/page/locales/resource/en-US.json
@@ -9,7 +9,15 @@
         "dark": "Dark",
         "light": "Light",
         "language": "Language",
-        "intro": "QuantDirect - A platform for quant researchers to analysis and communicate."
+        "intro": "QuantDirect - A platform for quant researchers to analysis and communicate.",
+        "indicators": {
+            "NONE": "None",
+            "MA": "Moving Average",
+            "BOLL": "Bollinger Bands",
+            "EXPMA": "Exponential Moving Average",
+            "TURNOVER": "Turnover",
+            "AMOUNT": "Amount"
+        }
     },
     "home": {
         "welcome": "Welcome"
