Refactored: Directory structure

--- a/App/src/app/locales/resource/en-US.json
+++ b/App/src/app/locales/resource/en-US.json
@@ -1,7 +1,7 @@
 {
     "basic": {
         "explore": "Explore",
-        "analysis": "Analysis",
+        "research": "Research",
         "community": "Community",
         "help": "Help",
         "dashboard": "Dashboard",
