--- a/App/src/app/locales/resource/zh-HK.json
+++ b/App/src/app/locales/resource/zh-HK.json
@@ -1,7 +1,7 @@
 {
     "basic": {
         "explore": "探索",
-        "analysis": "分析",
+        "research": "研究",
         "community": "社區",
         "help": "幫助",
         "dashboard": "儀表盤",
