--- a/App/src/app/locales/resource/zh-CN.json
+++ b/App/src/app/locales/resource/zh-CN.json
@@ -1,7 +1,7 @@
 {
     "basic": {
         "explore": "探索",
-        "analysis": "分析",
+        "research": "研究",
         "community": "社区",
         "help": "帮助",
         "dashboard": "仪表盘",
