--- a/App/src/app/locales/resource/zh-CN.json
+++ b/App/src/app/locales/resource/zh-CN.json
@@ -1,5 +1,6 @@
 {
     "basic": {
+        "settings": "设置",
         "explore": "探索",
         "research": "研究",
         "community": "社区",
@@ -87,6 +88,8 @@
             "1month": "1月",
             "1quarter": "1季",
             "1year": "1年"
-        }
+        },
+        "market_quotation": "行情",
+        "contract_info": "合约信息"
     }
 }
