--- a/App/src/app/locales/resource/zh-HK.json
+++ b/App/src/app/locales/resource/zh-HK.json
@@ -1,5 +1,6 @@
 {
     "basic": {
+        "settings": "設置",
         "explore": "探索",
         "research": "研究",
         "community": "社區",
@@ -84,6 +85,8 @@
             "1month": "1月",
             "1quarter": "1季",
             "1year": "1年"
-        }
+        },
+        "market_quotation": "行情",
+        "contract_info": "合約信息"
     }
 }
