feat: Adjusting window scale by keyboard shortcuts.

--- a/App/src/app/locales/resource/en-US.json
+++ b/App/src/app/locales/resource/en-US.json
@@ -1,5 +1,10 @@
 {
     "basic": {
+        "maximize": "Maximize",
+        "restore": "Restore",
+        "minimize": "Minimize",
+        "close": "Close",
+        "scale": "Scale",
         "settings": "Settings",
         "explore": "Explore",
         "research": "Research",
