--- a/App/src/app/locales/resource/zh-CN.json
+++ b/App/src/app/locales/resource/zh-CN.json
@@ -1,5 +1,10 @@
 {
     "basic": {
+        "maximize": "最大化",
+        "restore": "还原",
+        "minimize": "最小化",
+        "close": "关闭",
+        "scale": "缩放",
         "settings": "设置",
         "explore": "探索",
         "research": "研究",
