--- a/App/src/app/locales/resource/zh-HK.json
+++ b/App/src/app/locales/resource/zh-HK.json
@@ -1,5 +1,10 @@
 {
     "basic": {
+        "maximize": "最大化",
+        "restore": "還原",
+        "minimize": "最小化",
+        "close": "關閉",
+        "scale": "縮放",
         "settings": "設置",
         "explore": "探索",
         "research": "研究",
