feat: Added entry to 'Trading' page; Optimized layout.

--- a/App/src/app/locales/resource/en-US.json
+++ b/App/src/app/locales/resource/en-US.json
@@ -8,6 +8,7 @@
         "settings": "Settings",
         "explore": "Explore",
         "research": "Research",
+        "trading": "Trading",
         "community": "Community",
         "help": "Help",
         "dashboard": "Dashboard",
