--- a/App/src/app/locales/resource/zh-HK.json
+++ b/App/src/app/locales/resource/zh-HK.json
@@ -8,6 +8,7 @@
         "settings": "設置",
         "explore": "探索",
         "research": "研究",
+        "trading": "交易",
         "community": "社區",
         "help": "幫助",
         "dashboard": "儀表盤",
