--- a/App/src/app/locales/resource/zh-CN.json
+++ b/App/src/app/locales/resource/zh-CN.json
@@ -8,6 +8,7 @@
         "settings": "设置",
         "explore": "探索",
         "research": "研究",
+        "trading": "交易",
         "community": "社区",
         "help": "帮助",
         "dashboard": "仪表盘",
