feat: Redesigned settings page

--- a/App/src/app/locales/resource/en-US.json
+++ b/App/src/app/locales/resource/en-US.json
@@ -12,10 +12,6 @@
         "community": "Community",
         "help": "Help",
         "dashboard": "Dashboard",
-        "theme": "Theme",
-        "dark": "Dark",
-        "light": "Light",
-        "language": "Language",
         "intro": "QuantDirect - A platform for quant researchers to analysis and communicate.",
         "indicators": {
             "NONE": "None",
@@ -25,6 +21,41 @@
             "TURNOVER": "Turnover",
             "AMOUNT": "Amount"
         }
+    },
+    "settings": {
+        "general": "General",
+        "follow_system": "Follow system",
+        "theme_system_desc": "Match OS appearance",
+        "language_system_desc": "Match system language",
+        "language_simplified": "Simplified Chinese",
+        "language_traditional": "Traditional Chinese",
+        "language_en": "English",
+        "theme": "Theme",
+        "theme_dark": "Dark",
+        "theme_light": "Light",
+        "language": "Language",
+        "config_file": "Config file",
+        "config_file_unknown": "Unavailable",
+        "market_ws": "WebCTP Market Server",
+        "trading_ws": "WebCTP Trading Server",
+        "server_address": "Address",
+        "server_port": "Port",
+        "server_uri": "URI",
+        "local_file": "Local file",
+        "api_url": "API URL",
+        "or": "or",
+        "default_api_prefix": "Default API",
+        "ds_futures_calendar": "Futures trading calendar",
+        "ds_futures_contracts": "Futures contract list",
+        "ds_futures_tick": "Futures tick data",
+        "ds_futures_1m": "Futures 1-minute data",
+        "ds_broker_positions": "Broker positions",
+        "ds_options_contracts": "Options contract list",
+        "ds_options_tick": "Options tick data",
+        "browse": "Browse...",
+        "data_source": "Data Source",
+        "trading": "Market / Trading",
+        "pending": "Coming soon"
     },
     "home": {
         "welcome": "Welcome"
