--- a/App/src/app/locales/resource/zh-CN.json
+++ b/App/src/app/locales/resource/zh-CN.json
@@ -12,10 +12,6 @@
         "community": "社区",
         "help": "帮助",
         "dashboard": "仪表盘",
-        "theme": "主题",
-        "dark": "深色",
-        "light": "浅色",
-        "language": "语言",
         "intro": "QuantDirect - 量化研究者分析和交流的平台",
         "indicators": {
             "NONE": "不显示",
@@ -25,6 +21,41 @@
             "TURNOVER": "成交量",
             "AMOUNT": "成交额"
         }
+    },
+    "settings": {
+        "general": "通用",
+        "follow_system": "跟随系统",
+        "theme_system_desc": "跟随系统主题",
+        "language_system_desc": "跟随系统语言",
+        "language_simplified": "简体中文",
+        "language_traditional": "繁体中文",
+        "language_en": "英文",
+        "theme": "主题",
+        "theme_dark": "深色",
+        "theme_light": "浅色",
+        "language": "语言",
+        "config_file": "配置文件",
+        "config_file_unknown": "无法获取",
+        "market_ws": "WebCTP行情服务器",
+        "trading_ws": "WebCTP交易服务器",
+        "server_address": "地址",
+        "server_port": "端口",
+        "server_uri": "URI",
+        "local_file": "本地文件",
+        "api_url": "API地址",
+        "or": "或",
+        "default_api_prefix": "默认API",
+        "ds_futures_calendar": "期货交易日历",
+        "ds_futures_contracts": "期货合约列表",
+        "ds_futures_tick": "期货Tick数据",
+        "ds_futures_1m": "期货1分钟数据",
+        "ds_broker_positions": "经纪商持仓数据",
+        "ds_options_contracts": "期权列表",
+        "ds_options_tick": "期权Tick数据",
+        "browse": "浏览...",
+        "data_source": "数据源",
+        "trading": "行情/交易",
+        "pending": "敬请期待"
     },
     "home": {
         "welcome": "欢迎"
