--- a/App/src/app/locales/resource/zh-HK.json
+++ b/App/src/app/locales/resource/zh-HK.json
@@ -12,10 +12,6 @@
         "community": "社區",
         "help": "幫助",
         "dashboard": "儀表盤",
-        "theme": "主題",
-        "dark": "深色",
-        "light": "淺色",
-        "language": "語言",
         "intro": "QuantDirect - 量化研究者分析和交流的平臺",
         "indicators": {
             "NONE": "不顯示",
@@ -25,6 +21,41 @@
             "TURNOVER": "成交量",
             "AMOUNT": "成交額"
         }
+    },
+    "settings": {
+        "general": "通用",
+        "follow_system": "跟隨系統",
+        "theme_system_desc": "跟隨系統主題",
+        "language_system_desc": "跟隨系統語言",
+        "language_simplified": "簡體中文",
+        "language_traditional": "繁體中文",
+        "language_en": "英文",
+        "theme": "主題",
+        "theme_dark": "深色",
+        "theme_light": "淺色",
+        "language": "語言",
+        "config_file": "配置文件",
+        "config_file_unknown": "無法獲取",
+        "market_ws": "WebCTP行情服務器",
+        "trading_ws": "WebCTP交易服務器",
+        "server_address": "地址",
+        "server_port": "端口",
+        "server_uri": "URI",
+        "local_file": "本地文件",
+        "api_url": "API地址",
+        "or": "或",
+        "default_api_prefix": "默認API",
+        "ds_futures_calendar": "期貨交易日曆",
+        "ds_futures_contracts": "期貨合約列表",
+        "ds_futures_tick": "期貨Tick數據",
+        "ds_futures_1m": "期貨1分鐘數據",
+        "ds_broker_positions": "經紀商持倉數據",
+        "ds_options_contracts": "期權列表",
+        "ds_options_tick": "期權Tick數據",
+        "browse": "瀏覽...",
+        "data_source": "數據源",
+        "trading": "行情/交易",
+        "pending": "敬請期待"
     },
     "home": {
         "welcome": "歡迎"
