feat: add settings (address&port) for QDEngine

--- a/App/src/app/page/locales/resource/en-US.json
+++ b/App/src/app/page/locales/resource/en-US.json
@@ -36,6 +36,9 @@
         "language": "Language",
         "config_file": "Config file",
         "config_file_unknown": "Unavailable",
+        "engine": "Engine Address",
+        "engine_port": "Port",
+        "engine_preview_placeholder": "Enter engine address:port",
         "market_ws": "WebCTP Market Server",
         "trading_ws": "WebCTP Trading Server",
         "server_address": "Address",
