--- a/App/src/app/page/locales/resource/zh-CN.json
+++ b/App/src/app/page/locales/resource/zh-CN.json
@@ -36,6 +36,9 @@
         "language": "语言",
         "config_file": "配置文件",
         "config_file_unknown": "无法获取",
+        "engine": "Engine地址",
+        "engine_port": "端口",
+        "engine_preview_placeholder": "输入地址与端口后显示",
         "market_ws": "WebCTP行情服务器",
         "trading_ws": "WebCTP交易服务器",
         "server_address": "地址",
