--- a/App/src/app/page/locales/resource/zh-HK.json
+++ b/App/src/app/page/locales/resource/zh-HK.json
@@ -36,6 +36,9 @@
         "language": "語言",
         "config_file": "配置文件",
         "config_file_unknown": "無法獲取",
+        "engine": "Engine地址",
+        "engine_port": "端口",
+        "engine_preview_placeholder": "輸入地址與端口後顯示",
         "market_ws": "WebCTP行情服務器",
         "trading_ws": "WebCTP交易服務器",
         "server_address": "地址",
