feat: trading page demo; complement engine client

--- a/App/src/app/page/locales/resource/zh-CN.json
+++ b/App/src/app/page/locales/resource/zh-CN.json
@@ -13,6 +13,12 @@
         "help": "帮助",
         "dashboard": "仪表盘",
         "intro": "QuantDirect - 量化研究者分析和交流的平台",
+        "engine_connected": "QDEngine已连接",
+        "engine_connecting": "QDEngine连接中",
+        "engine_disconnected": "QDEngine未连接",
+        "engine_status_connected": "已连接",
+        "engine_status_connecting": "连接中",
+        "engine_status_disconnected": "未连接",
         "indicators": {
             "NONE": "不显示",
             "MA": "移动平均线",
@@ -39,8 +45,12 @@
         "engine": "Engine地址",
         "engine_port": "端口",
         "engine_preview_placeholder": "输入地址与端口后显示",
+        "engine_autostart": "启动时使用该地址运行QDEngine",
+        "engine_connect_try": "尝试连接",
         "market_ws": "WebCTP行情服务器",
         "trading_ws": "WebCTP交易服务器",
+        "ctp_app_id": "CTP AppID",
+        "ctp_auth_code": "CTP AuthCode",
         "server_address": "地址",
         "server_port": "端口",
         "server_uri": "URI",
@@ -63,10 +73,11 @@
     "home": {
         "welcome": "欢迎"
     },
-    "tradingPage": {
+    "trading": {
         "setup_title": "设置交易账户",
-        "setup_desc": "首次使用交易功能前，需要填写交易账户与前置服务器地址。",
+        "setup_desc": "使用交易功能前，需要填写交易账户与前置服务器地址。",
         "user_id": "交易账户（user_id）",
+        "alias": "别名（可选）",
         "broker_id": "经纪商ID",
         "front_trade_addr": "交易前置服务器地址",
         "front_trade_port": "交易前置服务器端口",
@@ -75,7 +86,46 @@
         "save": "保存",
         "validation_error": "请修正标红的字段。",
         "validation_hint": "请输入所有字段。",
-        "placeholder": "保存账号信息后，将显示交易工作区。"
+        "placeholder": "保存账号信息后，将显示交易工作区。",
+        "engine_not_connected": "QDEngine未连接。请检查您的引擎配置。",
+        "connect_and_login": "连接CTP并登录",
+        "account_not_set": "尚未配置账户",
+        "account": "账户",
+        "password": "密码",
+        "password_placeholder": "请输入交易密码",
+        "status_not_logged_in": "未登录",
+        "status_webctp_market": "连接WebCTP行情服务器...",
+        "status_webctp_trade": "连接WebCTP交易服务器...",
+        "status_ctp_market": "连接CTP行情前置服务器...",
+        "status_ctp_trade": "连接CTP交易前置服务器...",
+        "status_ctp_auth": "认证CTP客户端...",
+        "status_ctp_trade_login": "登录CTP交易服务器...",
+        "status_ctp_market_login": "登录CTP行情服务器...",
+        "account_info": "账户信息",
+        "no_account_info": "等待账户信息...",
+        "account_id": "账户ID",
+        "currency": "币种",
+        "available": "可用资金",
+        "withdraw_quota": "可取资金",
+        "deposit": "入金",
+        "withdraw": "出金",
+        "cash_in": "资金差额",
+        "commission": "手续费",
+        "close_profit": "平仓盈亏",
+        "position_profit": "持仓盈亏",
+        "curr_margin": "当前保证金",
+        "frozen_margin": "冻结保证金",
+        "exchange_margin": "交易所保证金",
+        "pre_balance": "上次结余",
+        "credit": "信用额度",
+        "mortgage": "质押金额",
+        "reserve_balance": "基本准备金",
+        "trading_day": "交易日期",
+        "settlement_id": "结算编号",
+        "logout": "退出账户"
+    },
+    "common": {
+        "edit": "修改"
     },
     "explore": {
         "list": {
