--- a/App/src/app/page/locales/resource/zh-HK.json
+++ b/App/src/app/page/locales/resource/zh-HK.json
@@ -13,6 +13,12 @@
         "help": "幫助",
         "dashboard": "儀表盤",
         "intro": "QuantDirect - 量化研究者分析和交流的平臺",
+        "engine_connected": "QDEngine已連接",
+        "engine_connecting": "QDEngine連接中",
+        "engine_disconnected": "QDEngine未連接",
+        "engine_status_connected": "已連接",
+        "engine_status_connecting": "連接中",
+        "engine_status_disconnected": "未連接",
         "indicators": {
             "NONE": "不顯示",
             "MA": "移動平均線",
@@ -39,8 +45,12 @@
         "engine": "Engine地址",
         "engine_port": "端口",
         "engine_preview_placeholder": "輸入地址與端口後顯示",
+        "engine_autostart": "啟動時使用該地址運行QDEngine",
+        "engine_connect_try": "嘗試連接",
         "market_ws": "WebCTP行情服務器",
         "trading_ws": "WebCTP交易服務器",
+        "ctp_app_id": "CTP AppID",
+        "ctp_auth_code": "CTP AuthCode",
         "server_address": "地址",
         "server_port": "端口",
         "server_uri": "URI",
@@ -63,10 +73,11 @@
     "home": {
         "welcome": "歡迎"
     },
-    "tradingPage": {
+    "trading": {
         "setup_title": "設置交易賬戶",
-        "setup_desc": "首次使用交易功能前，請填寫交易賬戶與前置伺服器地址。",
+        "setup_desc": "使用交易功能前，請填寫交易賬戶與前置伺服器地址。",
         "user_id": "交易賬戶（user_id）",
+        "alias": "別名（可選）",
         "broker_id": "經紀商ID",
         "front_trade_addr": "交易前置伺服器地址",
         "front_trade_port": "交易前置伺服器端口",
@@ -75,7 +86,46 @@
         "save": "保存",
         "validation_error": "請修正標紅的欄位。",
         "validation_hint": "請輸入所有欄位。",
-        "placeholder": "保存賬號資訊後，將顯示交易工作區。"
+        "placeholder": "保存賬號資訊後，將顯示交易工作區。",
+        "engine_not_connected": "QDEngine未連接。請檢查您的引擎配置。",
+        "connect_and_login": "連接CTP並登入",
+        "account_not_set": "尚未配置賬戶",
+        "account": "賬戶",
+        "password": "密碼",
+        "password_placeholder": "請輸入交易密碼",
+        "status_not_logged_in": "未登入",
+        "status_webctp_market": "連接WebCTP行情服務器...",
+        "status_webctp_trade": "連接WebCTP交易服務器...",
+        "status_ctp_market": "連接CTP行情前置服務器...",
+        "status_ctp_trade": "連接CTP交易前置服務器...",
+        "status_ctp_auth": "認證CTP客戶端...",
+        "status_ctp_trade_login": "登入CTP交易服務器...",
+        "status_ctp_market_login": "登入CTP行情服務器...",
+        "account_info": "賬戶資訊",
+        "no_account_info": "等待賬戶資訊...",
+        "account_id": "賬戶ID",
+        "currency": "幣種",
+        "available": "可用資金",
+        "withdraw_quota": "可取資金",
+        "deposit": "入金",
+        "withdraw": "出金",
+        "cash_in": "資金差額",
+        "commission": "手續費",
+        "close_profit": "平倉盈虧",
+        "position_profit": "持倉盈虧",
+        "curr_margin": "當前保證金",
+        "frozen_margin": "凍結保證金",
+        "exchange_margin": "交易所保證金",
+        "pre_balance": "上次結餘",
+        "credit": "信用額度",
+        "mortgage": "質押金額",
+        "reserve_balance": "基本準備金",
+        "trading_day": "交易日期",
+        "settlement_id": "結算編號",
+        "logout": "退出賬戶"
+    },
+    "common": {
+        "edit": "修改"
     },
     "explore": {
         "list": {
