--- a/App/src/app/page/locales/resource/en-US.json
+++ b/App/src/app/page/locales/resource/en-US.json
@@ -13,6 +13,9 @@
         "help": "Help",
         "dashboard": "Dashboard",
         "intro": "QuantDirect - A platform for quant researchers to analysis and communicate.",
+        "engine_connected": "QDEngine connected",
+        "engine_connecting": "QDEngine connecting",
+        "engine_disconnected": "QDEngine disconnected",
         "indicators": {
             "NONE": "None",
             "MA": "Moving Average",
@@ -39,8 +42,12 @@
         "engine": "Engine Address",
         "engine_port": "Port",
         "engine_preview_placeholder": "Enter engine address:port",
+        "engine_autostart": "Use this address to run QDEngine on startup",
+        "engine_connect_try": "Attempt to connect",
         "market_ws": "WebCTP Market Server",
         "trading_ws": "WebCTP Trading Server",
+        "ctp_app_id": "CTP AppID",
+        "ctp_auth_code": "CTP AuthCode",
         "server_address": "Address",
         "server_port": "Port",
         "server_uri": "URI",
@@ -63,10 +70,11 @@
     "home": {
         "welcome": "Welcome"
     },
-    "tradingPage": {
+    "trading": {
         "setup_title": "Set Up Trading Account",
         "setup_desc": "Please enter your trading credentials and front server addresses before using the trading workspace.",
         "user_id": "Trading Account (user_id)",
+        "alias": "Alias (optional)",
         "broker_id": "Broker ID",
         "front_trade_addr": "Trade Front IPv4",
         "front_trade_port": "Trade Front Port",
@@ -75,7 +83,46 @@
         "save": "Save",
         "validation_error": "Please fix the highlighted fields.",
         "validation_hint": "Please fill in all fields.",
-        "placeholder": "Trading workspace will appear here after account information is saved."
+        "placeholder": "Trading workspace will appear here after account information is saved.",
+        "engine_not_connected": "QDEngine is not connected. Please check your engine settings and refresh this page again.",
+        "connect_and_login": "Connect to CTP & Log In",
+        "account_not_set": "Account not configured yet",
+        "account": "Account",
+        "password": "Password",
+        "password_placeholder": "Enter trading password",
+        "status_not_logged_in": "Not logged in",
+        "status_webctp_market": "Connecting WebCTP market server...",
+        "status_webctp_trade": "Connecting WebCTP trading server...",
+        "status_ctp_market": "Connecting CTP market front...",
+        "status_ctp_trade": "Connecting CTP trade front...",
+        "status_ctp_auth": "Authenticating CTP client...",
+        "status_ctp_trade_login": "logging in CTP trade server...",
+        "status_ctp_market_login": "logging in CTP market data server...",
+        "account_info": "Account Information",
+        "no_account_info": "Waiting for account information...",
+        "account_id": "Account ID",
+        "currency": "Currency",
+        "available": "Available",
+        "withdraw_quota": "Withdraw Quota",
+        "deposit": "Deposit",
+        "withdraw": "Withdraw",
+        "cash_in": "Cash In",
+        "commission": "Commission",
+        "close_profit": "Close Profit",
+        "position_profit": "Position Profit",
+        "curr_margin": "Current Margin",
+        "frozen_margin": "Frozen Margin",
+        "exchange_margin": "Exchange Margin",
+        "pre_balance": "Pre Balance",
+        "credit": "Credit",
+        "mortgage": "Mortgage",
+        "reserve_balance": "Reserve Balance",
+        "trading_day": "Trading Day",
+        "settlement_id": "Settlement ID",
+        "logout": "Logout"
+    },
+    "common": {
+        "edit": "Edit"
     },
     "explore": {
         "list": {
